added windows and linux support with namespace workspaces

--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,46 @@
 plugins {
+    id "com.github.johnrengelman.shadow" version "6.1.0"
     id 'java'
-    id 'maven'
 }
 
-group 'com.github.zkingboos.player'
-version '1.0.0-SNAPSHOT'
+def projectGroup = 'com.github.zkingboos.player'
+def projectVersion = '1.0.0-SNAPSHOT'
+
+group = projectGroup
+version = projectVersion
 sourceCompatibility = 1.8
 
-repositories {
-    mavenCentral()
-    mavenLocal()
-    maven { url 'https://jitpack.io'}
-    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
-    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+allprojects {
+    apply plugin: "maven"
+    group = projectGroup
+    version = projectVersion
+
+    afterEvaluate {
+        repositories {
+            mavenCentral()
+            mavenLocal()
+            maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+            maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+        }
+
+        dependencies {
+            compileOnly "org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT"
+            compileOnly "org.projectlombok:lombok:1.18.16"
+            annotationProcessor "org.projectlombok:lombok:1.18.16"
+        }
+    }
+
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+    }
+
+    tasks.withType(Jar) {
+        destinationDirectory.set(file("$rootDir/build/"))
+    }
 }
 
-dependencies {
-    compileOnly "org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT"
-    compileOnly "org.projectlombok:lombok:1.18.16"
-    implementation 'com.github.zkingboos:youtubedl-java:1.5.6'
-    annotationProcessor "org.projectlombok:lombok:1.18.16"
-}
 
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
-}
+
+
+
+
