--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id "com.github.johnrengelman.shadow" version "6.1.0"
     id 'java'
     id 'maven'
 }
@@ -7,10 +8,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    mavenLocal()
     maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-    implementation 'com.github.zkingboos:youtubedl-java:1.5.6'
+    implementation 'com.github.zkingboos:youtubedl-java:1.5.7'
 }
 
