--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -1,18 +1,18 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "6.1.0"
+    id 'com.github.johnrengelman.shadow' version "6.1.0"
     id 'java'
+    id 'java-library'
     id 'maven'
 }
 
-sourceCompatibility = 1.8
-
 repositories {
     mavenCentral()
-    mavenLocal()
     maven { url 'https://jitpack.io' }
 }
 
 dependencies {
+    implementation 'com.dropbox.core:dropbox-core-sdk:3.1.5'
     implementation 'com.github.zkingboos:youtubedl-java:1.1.3'
+    implementation project(":resourcepack")
 }
 
